src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ecass01__Consent_to_share_with_other_agencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to share with other agencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ecass01__Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counsellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next of Kin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__Counsellor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counsellor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__EDLEVEL__c</fullName>
        <formula>Case(ecass01__X12b_Education_highest_level__c,
&quot;0. Primary Level incomplete&quot;,&quot;0&quot;,
&quot;1. Primary level&quot;,&quot;1&quot;,
&quot;2. Junior cert&quot;,&quot;2&quot;,
&quot;3. Leaving Cert&quot;,&quot;3&quot;,
&quot;4. Third Level&quot;,&quot;4&quot;,
&quot;5. Never went to school&quot;,&quot;5&quot;,
&quot;6. Special needs education&quot;,&quot;6&quot;,
&quot;8. Still in education&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <label>EDLEVEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__EDUCAGE__c</fullName>
        <formula>ecass01__X12a_Age_left_primary_school__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDUCAGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ecass01__EDUCATION__c</fullName>
        <formula>Case(ecass01__X12b_Education_highest_level__c,
&quot;0. Primary Level incomplete&quot;,&quot;0&quot;,
&quot;1. Primary level&quot;,&quot;1&quot;,
&quot;2. Junior cert&quot;,&quot;2&quot;,
&quot;3. Leaving Cert&quot;,&quot;3&quot;, 
&quot;4. Third Level&quot;,&quot;4&quot;, 
&quot;5. Never went to school&quot;,&quot;5&quot;, 
&quot;6. Special needs education&quot;,&quot;6&quot;, 
&quot;8. Still in education&quot;,&quot;8&quot;, 
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDUCATION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__EMPLOYMENT__c</fullName>
        <formula>Case( ecass01__X11_Employement_Status__c, 
&quot;1. In paid employment&quot;,&quot;1&quot;,
&quot;2. Unemployed&quot;,&quot;2&quot;, 
&quot;3. Fas/training course&quot;,&quot;3&quot;, 
&quot;4. Student&quot;,&quot;4&quot;,
&quot;5. Housewife/husband&quot;,&quot;5&quot;, 
&quot;6. Retired/unable to work&quot;,&quot;6&quot;,
&quot;8. Other (specify)&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMPLOYMENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Education_Level__c</fullName>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>1.	None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.	Primary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.	Intermediate/Junior Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.	Leaving Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.	Technical/Vocational Training - Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.	Completed Apprenticeship/Higher Certificate - Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.	Certificate/Diploma - Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.	Honours Degree - Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.	Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.	Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__EmployCode__c</fullName>
        <formula>Case( ecass01__X11_Employement_Status__c,
&quot;1. In paid employment&quot;,&quot;1&quot;,
&quot;2. Unemployed&quot;,&quot;2&quot;,
&quot;3 Fas/training course&quot;,&quot;3&quot;,
&quot;4. Student&quot;,&quot;4&quot;,
&quot;5. Housewife/husband&quot;,&quot;5&quot;,
&quot;6. Retired/unable to work&quot;,&quot;6&quot;,
&quot;8. Other (specify)&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <label>EmployCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Ethnic__c</fullName>
        <formula>Case(ecass01__X10b_Ethnic_Background__c, 
&quot;1. White Irish&quot;, &quot;1&quot;,
&quot;2. White Irish Traveller&quot;,&quot;2&quot;, 
&quot;3. Any other white background&quot;,&quot;3&quot;,
&quot;4. Black African background&quot;,&quot;4&quot;,
&quot;5. Any other black background&quot;,&quot;5&quot;,
&quot;6. Chinese background&quot;,&quot;6&quot;,
&quot;7. Any other Asian background&quot;,&quot;7&quot;, 
&quot;8. Other&quot;,&quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ethnic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Full_name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__GP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (GP)</relationshipLabel>
        <relationshipName>ContactsGP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__GP_name_from_other_agency__c</fullName>
        <label>GP name from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Gender_Code__c</fullName>
        <formula>Case( ecass01__X4_Gender__c,
&quot;Male&quot;, &quot;1&quot;, 
&quot;Female&quot;, &quot;2&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Gender__c</fullName>
        <label>Gender Obsolete</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__HSE_area__c</fullName>
        <label>HSE area</label>
        <picklist>
            <picklistValues>
                <fullName>03 HSE Southern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 HSE North Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 HSE Midland Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 HSE Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 HSE Mid Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 HSE North Eastern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 HSE South Eastern Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 HSE East Coast Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 HSE South Western Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 HSE Northern Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__Is_NOK_aware_of_issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Next of Kin aware of drug use or contact with this service?</inlineHelpText>
        <label>Is NOK aware of issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ecass01__Key_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Key Worker)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__LHO__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__LHO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LHO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__LIVING__c</fullName>
        <formula>Case(  ecass01__X7a_Living_with_whom__c ,

&quot;1. Alone&quot;, &quot;1&quot;,
&quot;2. Parents/family&quot;, &quot;2&quot;,
&quot;3. Friends&quot;, &quot;3&quot;,
&quot;4. Partner (alone)&quot;, &quot;4&quot;,
&quot;5. Partner &amp; Child(ren)&quot;, &quot;5&quot;,
&quot;6. Alone with child(ren)&quot;, &quot;6&quot;,
&quot;7. Other&quot;, &quot;7&quot;,
&quot;8. Foster Care&quot;, &quot;8&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIVING</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__LIVWHERE__c</fullName>
        <formula>Case(  ecass01__X7b_Livin_Where__c ,
&quot;1. Stable Accommodation&quot; , &quot;1&quot;,
&quot;2. Institution(prison/residential care/halfway house)&quot; , &quot;2&quot;,
&quot;3. Homeless&quot; , &quot;3&quot;,
&quot;4. Other unstable accommodation&quot; , &quot;4&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIVWHERE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__Member_of_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ecass01__NOK_from_other_agency__c</fullName>
        <label>NOK from other agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__NUMBER__c</fullName>
        <formula>$Setup.ecass01__eCASS_settings__c.ecass01__Organisation_Name__c &amp; ecass01__Client_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NUMBER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Nationality__c</fullName>
        <formula>CASE(   ecass01__X10a_Nationality__c  , 
&quot;1. Irish&quot;, &quot;1&quot;,
&quot;2. Other&quot;,&quot;2&quot;,
&quot;3. Irish traveller&quot;,&quot;3&quot;,
&quot;9&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Next_of_Kin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next of Kin</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Next of Kin)</relationshipLabel>
        <relationshipName>ContactsNOK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__Number_of_completed_Treatment__c</fullName>
        <label>Number of completed Treatment</label>
        <summaryFilterItems>
            <field>ecass01__Treatment__c.ecass01__Treatment_Type_Number__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ecass01__Treatment__c.ecass01__X37_Date_of_Final_Discharge__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </summaryFilterItems>
        <summaryForeignKey>ecass01__Treatment__c.ecass01__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ecass01__OTHEMPLOY__c</fullName>
        <formula>ecass01__X11_Employement_Status_other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OTHEMPLOY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Record_Valid__c</fullName>
        <formula>if (isnull( Birthdate ),&quot;No birth date&quot;, 
if(ecass01__Age__c &lt; 13 || ecass01__Age__c &gt; 85, &quot;Age invalid&quot;,  
if(ispickval(ecass01__X4_Gender__c,&quot;&quot;),&quot;No gender&quot;,
if(ispickval(ecass01__X7a_Living_with_whom__c ,&quot;&quot;) ,&quot;7a invalid&quot;,
if(ispickval(ecass01__X7b_Livin_Where__c ,&quot;&quot;) , &quot;7b invalid&quot;,
if(isblank(ecass01__Area_of_Residence_and_Reg_Code__c),&quot;Area of res invalid&quot;,
if(ispickval(ecass01__X10a_Nationality__c,&quot;&quot; ),&quot;10a invalid&quot;, 
if(ispickval(ecass01__X10b_Ethnic_Background__c,&quot;&quot; ),&quot;10b invalid&quot;,
if(ispickval(ecass01__X11_Employement_Status__c,&quot;&quot; ),&quot;11 invalid&quot;, 
if(AND(TEXT(ecass01__X11_Employement_Status__c) &lt;&gt; &quot;8. Other (specify)&quot;, NOT(ISBLANK(ecass01__X11_Employement_Status_other__c))),&quot;11 Employment status other, only required when Q11 = 8. Other (specify)&quot;,
if(ecass01__X12a_Age_left_primary_school__c &lt;= 0,&quot;12a invalid&quot;, 
if(ispickval(ecass01__X12b_Education_highest_level__c,&quot;&quot; ),&quot;12b invalid&quot;,
&quot;HRB OK&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__RegCode__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__RegCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__TFA__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__TFA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TFA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__X10a_Nationality_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>10a. Nationality Other</label>
        <referenceTo>ecass01__Nations__c</referenceTo>
        <relationshipLabel>Contacts (10a. Nationality Other)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__X10a_Nationality__c</fullName>
        <description>1. Irish     3. Irish traveller   2. Other   9. Not known</description>
        <inlineHelpText>1. Irish     3. Irish traveller   2. Other   9. Not known</inlineHelpText>
        <label>10a. Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>1. Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Irish traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X10b_Ethnic_Background__c</fullName>
        <label>10b. Ethnic Background</label>
        <picklist>
            <picklistValues>
                <fullName>1. White Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. White Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Any other white background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Black African background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Any other black background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Chinese background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Any other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Do not wish to answer this question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X11_Employement_Status__c</fullName>
        <label>11. Employement Status</label>
        <picklist>
            <picklistValues>
                <fullName>1. In paid employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Fas/training course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Housewife/husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Retired/unable to work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Other (specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X11_Employement_Status_other__c</fullName>
        <inlineHelpText>If 8. Other above please specify</inlineHelpText>
        <label>11. Employement Status other</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__X12a_Age_left_primary_school__c</fullName>
        <description>Year left school (not third level)
01. Never went to school
88. Still at school
99. Not known</description>
        <inlineHelpText>Year left school (not third level)
01. Never went to school
88. Still at school
99. Not known</inlineHelpText>
        <label>12a. Age left primary/secondary school</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ecass01__X12b_Education_highest_level__c</fullName>
        <label>12b. Education highest level</label>
        <picklist>
            <picklistValues>
                <fullName>0. Primary Level incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Primary level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Junior cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Leaving Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Third Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Never went to school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Special needs education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Still in education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X4_Gender__c</fullName>
        <inlineHelpText>1. Male
2. Female</inlineHelpText>
        <label>4. Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X7a_Living_with_whom__c</fullName>
        <label>7a. Living with whom?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Parents/family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Partner (alone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Partner &amp; Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Alone with child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X7b_Livin_Where__c</fullName>
        <label>7b. Living Where?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Stable Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Institution(prison/residential care/halfway house)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Other unstable accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecass01__X8a_Area_of_Residence__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__Area_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8a. Area of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__X8b_Community_Care_Area__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__CCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8b. Community Care Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__X9_City_County__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__RegCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9. City/County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__nation__c</fullName>
        <formula>IF( OR( TEXT(ecass01__X10a_Nationality__c) = &quot;1. Irish&quot; ,

TEXT( ecass01__X10a_Nationality__c ) = &quot;3. Irish traveller&quot;),

&quot;IRL&quot;,

IF(TEXT( ecass01__X10a_Nationality__c ) = &quot;9. Not known&quot;, &quot;ZZZ&quot;,


ecass01__X10a_Nationality_Other__r.ecass01__NationCode__c))</formula>
        <label>nation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from One to One or Bucket account processing.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated field.  Do not use.</description>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
</CustomObject>